# low-level-deep-learning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
examples/: api_basics.ipynb  cuda_tests.ipynb  generalised_nn.ipynb  linear_regression.ipynb  mmul_benchmarking.ipynb  neural_networks.ipynb
examples/notebooks/: cuda_tests.ipynb  general_neural_network.ipynb  generalised_nn.ipynb
examples/scripts/: gen_nn.py  gen_nn2.py  mnist_nn2.py
include/: activation.hpp  common_types.hpp  comp_graph.hpp  linear_regression.hpp  loss.hpp  matrix_functions.hpp  nn.hpp  pybind_cuda_interface.hpp
include/cuda/: cu_matrix_functions.h  cublas_functions.h  pybind_cuda_interface.hpp
include/cuda/nn/: nn.h
include/data/: batching.hpp
include/nn/: activation.hpp  loss.hpp  matrix_functions.hpp  nn.hpp  nn2.hpp  optim.hpp  train.hpp
include/tutorial/: comp_graph.hpp  linear_regression.hpp
python_tests/: benchmarks.py  manual_linear_regression.py  test_activation.py  test_computational_graph.py  test_general_nn.py  test_linear_regression.py  test_matrix_functions.py  test_neural_network.py  test_nn_operators.py
src/: activation.cpp  comp_graph.cpp  interface.cpp  linear_regression.cpp  loss.cpp  matrix_functions.cpp  nn.cpp  pybind_cuda_interface.cpp
src/cppapi/: __init__.py
src/cuda/: cu_matrix_functions.cu  cublas_matrix_functions.cu  pybind_cuda_interface.cpp
src/data/: batching.cpp
src/nn/: activation.cpp  layers.cpp  loss.cpp  matrix_functions.cpp  nn.cpp  nn2.cpp  optimiser.cpp  train.cpp
src/tutorial/: comp_graph.cpp  linear_regression.cpp
